# XPhoto

./: .gitignore  package-lock.json  package.json  vite.config.ts
splashscreen/: App.tsx  index.html
src/: App.tsx  data.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/plugins/tauri-plugin-photo/: Cargo.toml  README.md
src-tauri/plugins/tauri-plugin-photo/.changes/: config.json  initial-release.md  readme.md
src-tauri/plugins/tauri-plugin-photo/examples/vanilla/src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/plugins/tauri-plugin-photo/examples/vanilla/src-tauri/src/: main.rs
src-tauri/plugins/tauri-plugin-photo/migrations/2022-08-25-093610_create_groups/: up.sql
src-tauri/plugins/tauri-plugin-photo/src/: config.rs  group.rs  groups.rs  lib.rs  models.rs  schema.rs
src-tauri/plugins/tauri-plugin-window/: Cargo.toml  README.md
src-tauri/plugins/tauri-plugin-window/.changes/: config.json  initial-release.md  readme.md
src-tauri/plugins/tauri-plugin-window/examples/vanilla/src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/plugins/tauri-plugin-window/examples/vanilla/src-tauri/src/: main.rs
src-tauri/plugins/tauri-plugin-window/src/: lib.rs
src-tauri/src/: main.rs
src/components/: bar.tsx  nav.tsx
src/components/context/: index.tsx  test_data.json
src/components/context/folderTree/: file.tsx  index.tsx
src/components/settings/: index.tsx
