[package]
name = "tauri-plugin-photo"
version = "0.0.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.57"
exclude = ["/examples"]

[dependencies]
tauri = { version = "1.0.5" }
diesel = { version = "1.4.8", features = ["sqlite"] }
diesel_migrations = {  version = "1.4.0" }
dotenv = "0.15.0"
directories = "4.0"
toml = "0.4.2"
serde = "1.0"